--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <meta name="google-site-verification" content="z276CUh4KPfzjfLioXkDepPCH_MHati_6EbX1akXPUk" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "icon" href = "/images/favicon.svg">
