--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta name="google-site-verification" content="z276CUh4KPfzjfLioXkDepPCH_MHati_6EbX1akXPUk" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "icon" href = "/images/favicon.svg">
+    <link rel = "icon" href = "/images/ClutChess.svg">
     <link rel="manifest" href="/manifest.webmanifest">
     <title> Clutch Chess </title>
     <meta name = "description" content = "Play chess online with friends or bots, import FEN positions, and practice to improve your game. Start your next match or training session now!">
